--- a/bundle/config
+++ b/bundle/config
@@ -1,3 +1,4 @@
 ---
-BUNDLE_PATH: .bundle
-BUNDLE_BIN: .bundle/binstubs
+BUNDLE_PATH: ".bundle"
+BUNDLE_BIN: ".bundle/binstubs"
+BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
