--- a/bundle/config
+++ b/bundle/config
@@ -2,3 +2,7 @@
 BUNDLE_PATH: ".bundle"
 BUNDLE_BIN: ".bundle/binstubs"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
+BUNDLE_SPECIFIC_PLATFORM: "true"
+BUNDLE_GEM__TEST: "minitest"
+BUNDLE_GEM__MIT: "false"
+BUNDLE_GEM__COC: "false"
