--- a/bundle/config
+++ b/bundle/config
@@ -6,3 +6,4 @@ BUNDLE_SPECIFIC_PLATFORM: "true"
 BUNDLE_GEM__TEST: "minitest"
 BUNDLE_GEM__MIT: "false"
 BUNDLE_GEM__COC: "false"
+BUNDLE_BUILD__NOKOGIRI: "--use-system-libraries"
